EXTRA_DIST = \
	ant.xbm \
	automatic.xbm \
	automatic.xpm \
	automatic1.xbm \
	automatic1.xpm \
	automatic2.xbm \
	automatic2.xpm \
	automatic3.xbm \
	automatic3.xpm \
	change.xbm \
	convol.xbm \
	dropper.xpm \
	dropper_msk.xbm \
	dropper_src.xbm \
	image.xbm \
	kill.xbm \
	mag_msk.xbm \
	magin.xpm \
	magin_src.xbm \
	magout.xpm \
	magout_src.xbm \
	morph.xbm \
	pan.xpm \
	paint.xpm \
	program.xbm \
	select.xpm \
	slider.xbm \
	watch_1.xbm \
	watch_2.xbm \
	watch_3.xbm \
	watch_4.xbm \
	watch_5.xbm \
	watch_6.xbm \
	watch_7.xbm \
	watch_8.xbm \
	watch_msk.xbm \
	book_open.xpm \
	book_closed.xpm \
	toolbox_open.xpm \
	toolbox_closed.xpm \
	tools.xpm \
	col.xpm \
	separator.xpm \
	floppy.xpm \
	mini_page.xpm 
