EXTRA_DIST = \
	ant.xbm \
	automatic1.xbm \
	automatic1.xpm \
	automatic2.xbm \
	automatic2.xpm \
	automatic3.xbm \
	automatic3.xpm \
	automatic.xbm \
	automatic.xpm \
	book_closed.xpm \
	book_open.xpm \
	change.xbm \
	col.xpm \
	convol.xbm \
	dropper.xpm \
	floppy.xpm \
	image.xbm \
	kill.xbm \
	magin_src.xbm \
	magin.xpm \
	mag_msk.xbm \
	magout_src.xbm \
	magout.xpm \
	mini_page.xpm \
	morph.xbm \
	paint.xpm \
	pan.xpm \
	program.xbm \
	select.xpm \
	separator.xpm \
	slider.xbm \
	toolbox_closed.xpm \
	toolbox_open.xpm \
	tools.xpm \
	watch_1.xpm \
	watch_2.xpm \
	watch_3.xpm \
	watch_4.xpm \
	watch_5.xpm \
	watch_6.xpm \
	watch_7.xpm \
	watch_8.xpm 
