startdir = $(pkgdatadir)/start

start_DATA = \
	Math.def \
	Image.def \
	Colour.def \
	Tasks.def \
	Format.def \
	Filter.def \
	Matrix.def \
	Widgets.def \
	Histogram.def \
	Preferences.ws \
	_joe_extra.def \
	_joe_utilities.def \
	_convert.def \
	_generate.def \
	_list.def \
	_predicate.def \
	_stdenv.def \
	_types.def 

EXTRA_DIST = $(start_DATA)

