startdir = $(pkgdatadir)/compat/7.16

start_DATA = \
	Math.def \
	Image.def \
	Colour.def \
	Tasks.def \
	Object.def \
	Filter.def \
	Matrix.def \
	Widgets.def \
	Histogram.def \
	Preferences.ws \
	_joe_extra.def \
	_joe_utilities.def \
	_convert.def \
	_generate.def \
	_list.def \
	_predicate.def \
	_stdenv.def \
	_Object.def \
	_types.def 

EXTRA_DIST = $(start_DATA)

