startdir = $(pkgdatadir)/compat/7.8

start_DATA = \
	Math.def \
	Image.def \
	Mosaic.def \
	Colour.def \
	Resize.def \
	Capture.def \
	Format.def \
	Filter.def \
	Morphology.def \
	New.def \
	Histogram.def \
	Print.def \
	Rotate.def \
	Statistics.def \
	X_ray.def \
	_convert.def \
	_errors.def \
	_generate.def \
	_list.def \
	_predicate.def \
	_stdenv.def \
	_types.def 

EXTRA_DIST = $(start_DATA)

