startdir = $(pkgdatadir)/compat/7.10

start_DATA = \
	Colour.def \
	_convert.def \
	Filter.def \
	Format.def \
	_generate.def \
	Histogram.def \
	Image.def \
	_joe_extra.def \
	_joe_utilities.def \
	_list.def \
	Math.def \
	Matrix.def \
	_predicate.def \
	_stdenv.def \
	Tasks.def \
	_types.def \
	Widgets.def

EXTRA_DIST = $(start_DATA)

