startdir = $(pkgdatadir)/compat/8.2

start_DATA = \
	Colour.def \
	_convert.def \
	Filter.def \
	_generate.def \
	Histogram.def \
	Image.def \
	_joe_extra.def \
	_joe_utilities.def \
	_list.def \
	_magick.def \
	Magick.def \
	Math.def \
	Matrix.def \
	_Object.def \
	Object.def \
	_predicate.def \
	Preferences.ws \
	_stdenv.def \
	Tasks.def \
	_types.def \
	Widgets.def 

EXTRA_DIST = $(start_DATA)

